# educup-devblog

./: 404.html  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CNAME  index.md
search/: search_index.json
