[tool.poetry]
name = "educup-devblog"
version = "0.1.0"
description = "Dev blog of EducUp"
authors = ["Leynier Gutiérrez González <leynier41@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
